# omarchy-ollama-tui

./: CHANGES.md  CHECKLIST.md  CONTRIBUTING.md  Cargo.toml  GPU_SUPPORT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md
docs/: README.md
src/: app.rs  config.rs  lib.rs  main.rs
src/events/: handler.rs  mod.rs  tick.rs
src/gpu/: amd.rs  fallback.rs  intel.rs  mod.rs  nvidia.rs
src/ollama/: client.rs  mod.rs  models.rs  process.rs
src/ui/: gpu_stats.rs  layout.rs  mod.rs  model_list.rs  pull_dialog.rs  status_bar.rs
tests/: integration_tests.rs
